--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     <h2>Copyright &copy;, UiBrains Techno Portal</h2>
     <p>All Rights Reserved</p>
     <small>Developed & Maintained by
-        <a href="https://github.com/thenaveensaggam" target="_blank">
-            <i class="fa fa-user-circle"></i> Naveen Saggam
+        <a href="https://www.facebook.com/profile.php?id=100005060178867" target="_blank">
+            <i class="fa fa-user-circle"></i> Mahesh Rowthu
         </a>
     </small>
 </footer>
